
/**
 ******************  Script Configuration ******************
 */
buildscript {
    repositories {
        jcenter()
        gradlePluginPortal()

        maven {
            url "https://sandec.bintray.com/repo"
        }
    }

    dependencies {
        classpath 'com.sandec.jpro:jpro-plugin-gradle:2020.1.1'

    }
}



plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'org.beryx.jlink' version '2.17.2'

}



group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.15

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'http://nexus.gluonhq.com/nexus/content/repositories/releases'
    }


}

javafx {
    version = "15"
    modules = [ 'javafx.controls','javafx.fxml','javafx.graphics'] // you can add 'javafx.fxml', ...
}


dependencies {

    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
    compile group: 'com.gluonhq', name: 'charm-glisten', version: '6.0.2'
    compile group: 'org.graphstream', name: 'gs-core', version: '2.0'

    compile group: 'org.ini4j', name: 'ini4j', version: '0.5.4'





}

/**
 ******************  jpro Configuration ******************
 */
//--module-path="C:\javafx\lib" --add-modules=javafx.controls,javafx.fxml,javafx.graphics

apply plugin: 'com.sandec.jpro'


/**
 * App Main Class
 */

//mainClassName = 'com.jpro.hellojpro.HelloJProFXML'

/**
 * jpro settings
 */
jpro {
    // for debugging
    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

    JVMArgs << '-Xmx1000m'

    //jpro server port
    port = 8080

}
// for run jproStart

// for run jproRun
jlink {
    launcher {
        //noinspection GroovyAssignabilityCheck
        options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
        name = 'GyroGetter'
        addExtraDependencies("javafx")


    }

}

mainClassName = "app.Main";
